# Fast_API_example

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
adapters/: recipes.py
handlers/: postgres.py
models/postgres/: recipes.py
models/response/: errors.py  recipes.py
scripts/: scripts.py
